creating javabuzz functionality and test

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,7 +16,7 @@
 
 
   <!-- include spec files here... -->
-  <script src="spec/JavabuzzHelper.js"></script>
+  <script src="spec/JavabuzzSpec.js"></script>
 
 
 </head>
